# alpm12

./: Makefile.am  Makefile.in  NEWS  configure  configure.ac
lib/libalpm/: Makefile.am  Makefile.in  alpm12.pc.in
m4/: gettext.m4
